--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Projects from "../components/landingPage/Projects.astro";
 import About from "../components/landingPage/About.astro";
 ---
 
-<Layout>
+<Layout title = "Welcome">
 		<Hero />
 		<More />
 		<Features />
