--- a/src/components/landingPage/Hero.astro
+++ b/src/components/landingPage/Hero.astro
@@ -1,1 +1,10 @@
-<h1>Hero</h1>
+<header class ="bg-zinc-900 flex flex-col md:flex-row p-20 gap-3 text-center md:text-left">
+<div>
+    <h1 class = "text-5xl font-bold pb-2">Smart Phones</h1>
+    <p class= "my-4 text2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, voluptatibus minima aperiam possimus hic error qui velit sequi voluptatem incidunt.</p>
+    <button class = " bg-indigo-500 px-3 py-2 hover:bg-indigo-400">
+            Sales
+    </button>
+</div>
+    <img src= "../../../public//images/cell_phone.svg" alt ="cellPhone" class ="w-80">
+</header>
