--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,12 @@
 ---
+
+interface Props {
+    title: string;
+}
+
 import "../styles/Layout.css"
+
+const { title } = Astro.props
 ---
 
 <!DOCTYPE html>
@@ -7,10 +14,10 @@ import "../styles/Layout.css"
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing</title>
+    <title>Landing - { title }</title>
 </head>
 <body>
-    <main class="mx-auto container bg-red-400">
+    <main class="mx-auto container">
         <slot />
     </main>
 </body>
