--- a/src/components/landingPage/Hero.astro
+++ b/src/components/landingPage/Hero.astro
@@ -1,7 +1,7 @@
-<header class ="bg-zinc-900 flex flex-col md:flex-row p-20 gap-3 text-center md:text-left">
+<header class ="bg-zinc-900 flex flex-col md:flex-row p-20 gap-3 text-center md:text-left rounded-xl">
 <div>
     <h1 class = "text-5xl font-bold pb-2">Smart Phones</h1>
-    <p class= "my-4 text2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, voluptatibus minima aperiam possimus hic error qui velit sequi voluptatem incidunt.</p>
+    <p class= "my-4 text2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero necessitatibus unde ipsum inventore, doloremque maiores. Pariatur reiciendis cum earum repudiandae non aperiam perferendis, placeat rem expedita doloremque magni inventore, nesciunt omnis optio repellendus quis error, quisquam culpa neque ab. Quas aut beatae unde nesciunt, quia incidunt voluptate velit. Obcaecati, accusamus?</p>
     <button class = " bg-indigo-500 px-3 py-2 hover:bg-indigo-400">
             Sales
     </button>
