--- a/src/components/landingPage/More.astro
+++ b/src/components/landingPage/More.astro
@@ -1,1 +1,25 @@
-<h1>More</h1>
+<section class="flex">
+    <div class="flex-1 grid grid-cols-2">
+        <div class="text-center">
+            <img src="../../../public/favicon.svg" alt="favicon">
+            <p class ="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="text-center">
+            <img src="../../../public/favicon.svg" alt="favicon">
+            <p class ="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="text-center">
+            <img src="../../../public/favicon.svg" alt="favicon">
+            <p class ="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="text-center">
+            <img src="../../../public/favicon.svg" alt="favicon">
+            <p class ="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+    </div>
+
+    <div class="flex flex-1 flex-col gap-y-10">
+        <h2 class="text-5xl font bold">Lorem ipsum dolor sit.</h2>
+        <p class="text-3xl text-zinc-300">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laboriosam mollitia, illum quia expedita quam.</p>
+    </div>
+</section>
